envoy/envoy.yaml
static_resources:
    listeners:
        - name: listener_http
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 8080
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: ingress_http
                          use_remote_address: true
                          http2_protocol_options: {}
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: backend
                                    domains: ['*']
                                    routes:
                                        - match: { prefix: '/v1/auth' }
                                          route:
                                              cluster: auth_service_cluster
                                              retry_policy:
                                                  retry_on: 'connect-failure,refused-stream,unavailable'
                                                  num_retries: 2
                                                  per_try_timeout: '0.5s'

                                        - match: { prefix: '/v1/transaction' }
                                          route:
                                              cluster: transaction_service_cluster
                                              retry_policy:
                                                  retry_on: 'connect-failure,refused-stream,unavailable'
                                                  num_retries: 2
                                                  per_try_timeout: '0.5s'

                                        - match: { prefix: '/health' }
                                          route:
                                              cluster: api_gateway_cluster

                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    clusters:
        - name: xds_cluster
          type: STRICT_DNS
          connect_timeout: '1s'
          http2_protocol_options: {}
          load_assignment:
              cluster_name: xds_cluster
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: consul
                                      port_value: 8500

        - name: auth_service_cluster
          type: STRICT_DNS
          connect_timeout: '1s'
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          load_assignment:
              cluster_name: auth_service_cluster
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: auth-service
                                      port_value: 50051

        - name: transaction_service_cluster
          type: STRICT_DNS
          connect_timeout: '1s'
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          load_assignment:
              cluster_name: transaction_service_cluster
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: transaction-service
                                      port_value: 50052

        - name: api_gateway_cluster
          type: STRICT_DNS
          connect_timeout: '1s'
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: api_gateway_cluster
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: api-gateway
                                      port_value: 9000

admin:
    access_log_path: /tmp/admin_access.log
    address:
        socket_address:
            address: 0.0.0.0
            port_value: 9901
